refactor: unify response